test/libsolidity/syntaxTests/dataLocations/libraries/library_internal_function_return_parameters_no_data_location.sol
library L {
    function g(uint[]) internal pure {}
}
// ----
// TypeError: (27-33): Storage location must be one of: "storage", "memory" for parameter in internal function, but none was given.